--- a/package.json
+++ b/package.json
@@ -9,13 +9,35 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.8",
+    "@emotion/styled": "^11.10.8",
+    "@mui/material": "^5.12.2",
     "@next/font": "13.3.1",
+    "@prisma/client": "^4.8.1",
+    "@types/bcrypt": "^5.0.0",
+    "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "18.16.0",
     "@types/react": "18.0.38",
+    "@types/react-datepicker": "^4.11.2",
     "@types/react-dom": "18.0.11",
+    "@types/validator": "^13.7.15",
+    "axios": "^1.4.0",
+    "bcrypt": "^5.1.0",
+    "cookies-next": "^2.1.1",
+    "date-fns": "^2.30.0",
+    "jose": "^4.14.3",
+    "jsonwebtoken": "^9.0.0",
     "next": "13.3.1",
+    "prisma": "^4.8.1",
     "react": "18.2.0",
+    "react-datepicker": "^4.11.0",
     "react-dom": "18.2.0",
-    "typescript": "5.0.4"
+    "typescript": "5.0.4",
+    "validator": "^13.9.0"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.20",
+    "tailwindcss": "^3.2.4"
   }
 }
